--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,7 @@ venv/
 ENV/ 
 env.bak/ 
 venv.bak/ 
+por_env/
 
 # mkdocs documentation 
 /site 
@@ -114,3 +115,4 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+
